--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,6 +17,13 @@ stages:
 pack:
   stage: pack
   script:
+    - apt-get update
+    - apt-get dist-upgrade -y
+    - apt-get install curl -y --force-yes
+    - curl -sL https://deb.nodesource.com/setup_6.x > nodejs-repo
+    - chmod +x nodejs-repo
+    - ./nodejs-repo
+    - apt-get install nodejs libzmq-dev virtualenv build-essential git
     - make pack
     - tar -czvf `ls -d baserunner-*`.tar.gz baserunner-*
   artifacts:
