--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,7 +23,8 @@ pack:
     - curl -sL https://deb.nodesource.com/setup_6.x > nodejs-repo
     - chmod +x nodejs-repo
     - ./nodejs-repo
-    - apt-get install nodejs libzmq-dev virtualenv build-essential git
+    - apt-get install nodejs libzmq-dev build-essential git python-pip
+    - pip install virtualenv
     - make pack
     - tar -czvf `ls -d baserunner-*`.tar.gz baserunner-*
   artifacts:
