--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,7 @@ pack:
     - curl -sL https://deb.nodesource.com/setup_6.x > nodejs-repo
     - chmod +x nodejs-repo
     - ./nodejs-repo
-    - apt-get install -y --force-yes nodejs libzmq-dev build-essential git python-pip libpython-dev pkg-config
+    - apt-get install -y --force-yes nodejs libzmq-dev build-essential git python-pip libpython-dev pkg-config libhdf5-dev
     - pip install virtualenv
     - make pack
     - tar -czvf `ls -d baserunner-*`.tar.gz baserunner-*
