--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "externals/nanonet"]
 	path = externals/nanonet
-	url = git@github.com:nanoporetech/nanonet.git
+	url = https://github.com/nanoporetech/nanonet.git
