--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "electron-packager": "^8.5.2"
   },
   "dependencies": {
+    "bunyan": "^1.8.5",
     "chokidar": "^1.6.1",
     "queue": "^4.2.1",
+    "sqlite3": "^3.1.8",
     "zerorpc": "^0.9.7"
   }
 }
