--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bunyan": "^1.8.5",
     "chokidar": "^1.6.1",
     "node-getopt": "^0.2.3",
+    "node-notifier": "^5.0.2",
     "queue": "^4.2.1",
     "zerorpc": "^0.9.7"
   }
