--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ pack:
   script:
     - apt-get update
     - apt-get dist-upgrade -y
-    - apt-get install curl -y --force-yes
+    - apt-get install -y --force-yes curl jq
     - curl -sL https://deb.nodesource.com/setup_6.x > nodejs-repo
     - chmod +x nodejs-repo
     - ./nodejs-repo
