--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "baserunner",
-  "version": "0.1.0",
+  "name": "lamprey",
+  "version": "0.1.1",
   "scripts": {
     "start": "electron ."
   },
