--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
   "name": "lamprey",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "scripts": {
     "start": "electron .",
-    "flow": "flow; test $? -eq 0 -o $? -eq 2"
   },
   "devDependencies": {
-    "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "electron": "^1.6.1",
-    "electron-packager": "^8.5.2",
-    "flow-bin": "^0.41.0"
+    "electron-packager": "^8.5.2"
   },
   "dependencies": {
     "bunyan": "^1.8.5",
