--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "lamprey",
   "version": "0.1.2",
   "scripts": {
-    "start": "electron .",
+    "start": "electron ."
   },
   "devDependencies": {
     "electron": "^1.6.1",
