added repository info to package.json; basic linux zmq5 build instructions - will fail without su/do

--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "lamprey",
   "version": "0.1.2",
   "license" : "MPL-2.0",
+  "repository" : {
+    "type" : "git",
+    "url" : "https://github.com/nanoporetech/lamprey.git"
+  },
   "scripts": {
     "start": "electron ."
   },
